Edited info url

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: default
         <h2>Vote for the next feature!</h2>
 
         <p>Last features added: Cut scenes! Nudity! Controls!</p>
-        <p><a href="/info">What the hell is this?</a>
+        <p><a href="{{site.baseurl}}/info">What the hell is this?</a>
         </p>
         <p><a href="#" id="add">Add your own suggestion!</a>
         </p>
