--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ layout: default
         <p id="hint">Hint: hover over an icon to see what it is</p>
 
         <div id="screen">
-            <p id="gui">GUI</p>
-            <p id="level"></p>
+            <p id="gui"></p>
+            <div id="level"><p></p></div>
             <p id="controls"></p>
         </div>
     </section>
