--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
     <section id="votes">
         <h2>Vote for the next feature!</h2>
 
-        <p>Last features added: Weapon! Cut scenes! Nudity! Controls!</p>
+        <p>Last features added: Wolves! Weapon! Cut scenes! Nudity! Controls!</p>
         <p><a href="{{site.baseurl}}/info">What the hell is this?</a>
         </p>
         <p><a href="#" id="add">Add your own suggestion!</a>
