--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ layout: default
         <p>Last features added: Wolves! Weapon! Cut scenes! Nudity! Controls!</p>
         <p><a href="{{site.baseurl}}/info">What the hell is this?</a>
         </p>
+        <p>Talk about it! irc.esper.net #RPGBC</p>
         <p><a href="#" id="add">Add your own suggestion!</a>
         </p>
 
