Added in development text

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ layout: default
         <h2>Vote for the next feature!</h2>
 
         <p>Last features added: Tentacles! Wolves! Weapon! Cut scenes! Nudity! Controls!</p>
+        <p>In Development: Amazon Village!</p>
         <p><a href="{{site.baseurl}}/info">What the hell is this?</a>
         </p>
         <p>Talk about it! irc.esper.net #RPGBC</p>
